<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="29dp">

        <TextView
            android:id="@+id/textViewConnexion"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_gravity="center_horizontal"
            android:background="#00E2FF"
            android:gravity="center"
            android:text="@string/connexion"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:text="@string/e_mail"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/votre_adress_email"
            android:importantForAutofill="no"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:text="@string/mot_de_passe"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/votre_mot_de_passe"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/buttonSeConnecter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_light"
            android:text="@string/se_connecter"
            android:textColor="@color/white"
            android:onClick="Seconnecter"/>

        <CheckBox
            android:id="@+id/checkBoxGarderSessionActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/garder_ma_session_active" />

        <TextView
            android:id="@+id/textViewMotDePasseOublie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mot_de_passe_oubli"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="250dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="#D5D1D1"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textViewInscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/vous_n_avez_pas_encore_de_compte"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewInscriptionLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:onClick="onInscriptionClick"
                android:text="@string/inscrivez_vous_ici"
                android:textColor="#71C1CC"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>