<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d_poser_une_annonce"
                android:textSize="25sp"
                android:gravity="center"
                android:padding="15dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/blue_background"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_3_a_propos_de_votre_annonce"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="15dp"
                android:textColor="#166D7A"
                android:background="#CFCCCC"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titre"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewcat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categorier"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    />


                <Spinner
                    android:id="@+id/spinnerCategorie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choisir_une_cat_gorie"
                    android:entries="@array/TabCategorie"
                    android:layout_marginBottom="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewsec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secteur"
                    android:textSize="15sp"
                    android:textStyle="bold"

                    />


                <Spinner
                    android:id="@+id/spinnerSecteur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:entries="@array/TabSecteur"
                    android:hint="@string/choisir_une_cat_goriee" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewcontrat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_de_contrat"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editTextcontrat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewParagraphe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editTextParagraphe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:gravity="start|top"
                    android:scrollbars="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewville"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/villee"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />


                <Spinner
                    android:id="@+id/spinnerville"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/TabVille"
                    android:layout_marginBottom="110dp"
                    />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey_background"
                android:padding="20dp">


                <Button
                    android:id="@+id/button"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/suivant"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>